isme ek button liya he aur sath hi progressbar view liye he. Dono ki id get kr liya he aur fir xml file me Progresbar ki visiblity ko invisible set kr diya he. fir Button ke click listner pr Progressbar ko setVisiblityy(VISIBLE)kr diya he bas...

--- a/HappyBirthday/app/src/main/AndroidManifest.xml
+++ b/HappyBirthday/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:theme="@style/Theme.HappyBirthday"
         tools:targetApi="31">
         <activity
+            android:name=".atX"
+            android:exported="false"
+            android:label="@string/title_activity_at_x"
+            android:theme="@style/Theme.HappyBirthday" />
+        <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HappyBirthday">
-
-        </activity>
-        <activity android:name=".Calls"
+            android:theme="@style/Theme.HappyBirthday"></activity>
+        <activity
+            android:name=".Calls"
             android:exported="true"
             android:label="All Function call"
             android:theme="@style/Theme.HappyBirthday">
